# AWS-foundation-platform

./: .gitignore  README.md  app.py  cdk.json  pyproject.toml
configuration/: __init__.py
configuration/stacks/: __init__.py  ssm_stack.py
connectivity/: __init__.py
connectivity/stacks/: __init__.py  vpn_stack.py
foundation/: CONTRIBUTING.md  LICENSE  README.md  app.py  cdk.json
foundation/.github/ISSUE_TEMPLATE/: bug_report.md
foundation/.github/workflows/: ci.yml
foundation/constructs/ai/: bedrock_module.py
foundation/constructs/monitoring/: landing_zone_monitoring.py
foundation/constructs/networking/: transit_gateway.py  vpc_template.py
foundation/src/constructs/account/: account_factory.py
foundation/src/constructs/governance/: service_control_policies.py
foundation/src/constructs/security/: security_baseline.py
foundation/src/stacks/: network_stack.py  security_stack.py  workload_stack.py
foundation/src/utils/: account_utils.py
foundation/stacks/: core_stack.py
observability/: README.md  app.py
observability/observability/stacks/: alerting_stack.py  core_stack.py  resource_discovery_stack.py  slack_integration_stack.py
observability/stacks/: __init__.py  monitoring_stack.py
tests/: test_app.py  test_basic_synthesis.py
